src/main/java/syntactic/test/failing/uppercaseAttribute.ru
struct Hola {
    pri Int A;
}

start{}

/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 2 | 13 | Se esperaba [ID] pero se encontró ID_CLASS: A |